fix(fifty): change selector for spacing; comment out block-size (#776)
* fix(fifty): change selector for spacing; comment out block-size

* fix(fifty): reset the block height; update image controls

--- a/eds/blocks/columns/columns.css
+++ b/eds/blocks/columns/columns.css
@@ -10,8 +10,9 @@
   flex-direction: column;
 }
 
-.columns > div > div :where(h2, p) {
-  margin: var(--space-2) var(--space-8);
+.columns > div > div :is(h2, p) {
+  margin: 0 0 var(--space-4);
+
 }
 
 .columns > div > div :where(calcite-link, calcite-button) {
@@ -29,11 +30,13 @@
 }
 
 .columns > div > :not(.columns-img-col) {
+  inline-size: 90vw;
+  margin-inline: auto;
   padding: var(--space-16) 0 var(--space-20);
 }
 
 .columns > div > .columns-img-col img {
-  aspect-ratio: 16 / 9;
+  /* aspect-ratio: 16 / 9; */
   block-size: 100%;
   display: block;
   inline-size: 100%;
